source/java/org.wcs.smart.observation.query/src/org/wcs/smart/observation/query/parser/internal/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package org.wcs.smart.observation.query.parser.internal.parser;

import java.util.*;
import org.wcs.smart.observation.query.parser.internal.*;
import org.wcs.smart.query.model.filter.*;
import org.wcs.smart.query.model.summary.*;

public class Parser implements ParserConstants {

/* ------------ Expressions ----------------------*/
  final public SumQueryDefinition SumQuery() throws ParseException {
        ValuePart values = null;
        GroupByPart rowGroupBy = null;
        GroupByPart colGroupBy = null;
        QueryFilter vFilter = null;
        QueryFilter rFilter = null;
    values = ValuePart();
    jj_consume_token(QUERY_SPLITTER);
    rowGroupBy = GroupByPart();
    jj_consume_token(QUERY_SPLITTER);
    colGroupBy = GroupByPart();
    jj_consume_token(QUERY_SPLITTER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_NOT:
    case OPENPAREN:
    case CATEGORY_KEY:
    case ATT_STR_KEY:
    case ATT_VALUE_KEY:
    case ATT_BOOL_KEY:
    case ATT_LIST_KEY:
    case ATT_TREE_KEY:
    case CAT_ATT_STR_KEY:
    case CAT_ATT_VALUE_KEY:
    case CAT_ATT_BOOL_KEY:
    case CAT_ATT_LIST_KEY:
    case CAT_ATT_TREE_KEY:
    case DM_KEY:
    case AREA_KEY:
      vFilter = QueryFilterInternal();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUERY_SPLITTER:
      jj_consume_token(QUERY_SPLITTER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NOT:
      case OPENPAREN:
      case CATEGORY_KEY:
      case ATT_STR_KEY:
      case ATT_VALUE_KEY:
      case ATT_BOOL_KEY:
      case ATT_LIST_KEY:
      case ATT_TREE_KEY:
      case CAT_ATT_STR_KEY:
      case CAT_ATT_VALUE_KEY:
      case CAT_ATT_BOOL_KEY:
      case CAT_ATT_LIST_KEY:
      case CAT_ATT_TREE_KEY:
      case DM_KEY:
      case AREA_KEY:
        rFilter = QueryFilterInternal();
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(0);
        {if (true) return SumQueryDefinition.createQuery(values, rowGroupBy, colGroupBy, vFilter, rFilter);}
    throw new Error("Missing return statement in function");
  }

  final public GridQueryDefinition GridQuery() throws ParseException {
        IValueItem value = null;
        QueryFilter valueFilter = null;
        QueryFilter rateFilter = null;
        Double gridSize = null;
    value = ValueItem();
    jj_consume_token(QUERY_SPLITTER);
    jj_consume_token(NUMBER);
                     gridSize = Double.parseDouble(token.image);
    jj_consume_token(QUERY_SPLITTER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_NOT:
    case OPENPAREN:
    case CATEGORY_KEY:
    case ATT_STR_KEY:
    case ATT_VALUE_KEY:
    case ATT_BOOL_KEY:
    case ATT_LIST_KEY:
    case ATT_TREE_KEY:
    case CAT_ATT_STR_KEY:
    case CAT_ATT_VALUE_KEY:
    case CAT_ATT_BOOL_KEY:
    case CAT_ATT_LIST_KEY:
    case CAT_ATT_TREE_KEY:
    case DM_KEY:
    case AREA_KEY:
      valueFilter = QueryFilterInternal();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(QUERY_SPLITTER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_NOT:
    case OPENPAREN:
    case CATEGORY_KEY:
    case ATT_STR_KEY:
    case ATT_VALUE_KEY:
    case ATT_BOOL_KEY:
    case ATT_LIST_KEY:
    case ATT_TREE_KEY:
    case CAT_ATT_STR_KEY:
    case CAT_ATT_VALUE_KEY:
    case CAT_ATT_BOOL_KEY:
    case CAT_ATT_LIST_KEY:
    case CAT_ATT_TREE_KEY:
    case DM_KEY:
    case AREA_KEY:
      rateFilter = QueryFilterInternal();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(0);
        {if (true) return GridQueryDefinition.createQuery(value, gridSize, valueFilter, rateFilter);}
    throw new Error("Missing return statement in function");
  }

  final public QueryFilter QueryFilter() throws ParseException {
        QueryFilter expr;
    expr = QueryFilterInternal();
    jj_consume_token(0);
        {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public QueryFilter QueryFilterInternal() throws ParseException {
        IFilter.FilterType filterType = IFilter.FilterType.OBSERVATION;
        IFilter expr = EmptyFilter.INSTANCE;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DM_KEY:
      jj_consume_token(DM_KEY);
                        filterType = IFilter.FilterType.parse(token.image);
      jj_consume_token(QUERY_SPLITTER);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    expr = ExpressionPart();
        {if (true) return QueryFilter.createFilter(expr, filterType);}
    throw new Error("Missing return statement in function");
  }

  final public ValuePart ValuePart() throws ParseException {
        IValueItem item;
        List<IValueItem> items = new ArrayList<IValueItem >();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUM_CAT_VALUE_KEY:
    case SUM_ATTRIBUTE_VALUE_KEY:
    case SUM_CAT_ATT_VALUE_KEY:
    case SUM_ATTRIBUTE_VALUE_LISTTREE_KEY:
    case SUM_CAT_ATT_VALUE_LISTTREE_KEY:
      item = ValueItem();
                        items.add(item);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_1;
      }
      jj_consume_token(COMMA);
      item = ValueItem();
                        items.add(item);
    }
                {if (true) return ValuePart.createValuePart(items);}
    throw new Error("Missing return statement in function");
  }

  final public IValueItem ValueItem() throws ParseException {
        IValueItem item = null;
    item = SingleValueItem();
                 {if (true) return item;}
    throw new Error("Missing return statement in function");
  }

  final public IValueItem SingleValueItem() throws ParseException {
        IValueItem item;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUM_CAT_VALUE_KEY:
      jj_consume_token(SUM_CAT_VALUE_KEY);
                        item = ObservationCategoryValueItem.createItem( token.image );
      break;
    case SUM_ATTRIBUTE_VALUE_KEY:
      jj_consume_token(SUM_ATTRIBUTE_VALUE_KEY);
                        item = ObservationAttributeValueItem.createAttributeItem( token.image );
      break;
    case SUM_CAT_ATT_VALUE_KEY:
      jj_consume_token(SUM_CAT_ATT_VALUE_KEY);
                        item = ObservationAttributeValueItem.createCategoryAttributeItem( token.image );
      break;
    case SUM_ATTRIBUTE_VALUE_LISTTREE_KEY:
      jj_consume_token(SUM_ATTRIBUTE_VALUE_LISTTREE_KEY);
                        item = ObservationAttributeValueItem.createAttributeItem( token.image );
      break;
    case SUM_CAT_ATT_VALUE_LISTTREE_KEY:
      jj_consume_token(SUM_CAT_ATT_VALUE_LISTTREE_KEY);
                        item = ObservationAttributeValueItem.createCategoryAttributeItem( token.image );
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                 {if (true) return item;}
    throw new Error("Missing return statement in function");
  }

  final public GroupByPart GroupByPart() throws ParseException {
        IGroupBy item;
        List<IGroupBy> items = new ArrayList<IGroupBy>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DATE_GROUPBY_ITEM:
    case CATEGORY_GROUPBY_ITEM:
    case AREA_GROUPBY_ITEM:
    case ATTRIBUTE_GROUPBY_ITEM:
    case CATEGORY_ATTRIBUTE_GROUPBY_ITEM:
      item = GroupByItem();
                        items.add(item);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      item = GroupByItem();
                        items.add(item);
    }
                {if (true) return GroupByPart.createGroupBy(items);}
    throw new Error("Missing return statement in function");
  }

  final public IGroupBy GroupByItem() throws ParseException {
        IGroupBy item;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DATE_GROUPBY_ITEM:
      jj_consume_token(DATE_GROUPBY_ITEM);
                        item = DateGroupBy.createGroupBy(token.image);
      break;
    case CATEGORY_GROUPBY_ITEM:
      jj_consume_token(CATEGORY_GROUPBY_ITEM);
                        item = CategoryGroupBy.createGroupBy(token.image);
      break;
    case AREA_GROUPBY_ITEM:
      jj_consume_token(AREA_GROUPBY_ITEM);
                        item = AreaGroupBy.createGroupBy(token.image);
      break;
    case ATTRIBUTE_GROUPBY_ITEM:
      jj_consume_token(ATTRIBUTE_GROUPBY_ITEM);
                        item = AttributeGroupBy.createAttributeGroupBy(token.image);
      break;
    case CATEGORY_ATTRIBUTE_GROUPBY_ITEM:
      jj_consume_token(CATEGORY_ATTRIBUTE_GROUPBY_ITEM);
                        item = AttributeGroupBy.createCategoryAttributeGroupBy(token.image);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                 {if (true) return item;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter ExpressionPart() throws ParseException {
  IFilter expr = null;
  Operator op = null;
  IFilter expr2 = null;
    expr = BooleanPart();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_AND:
      case K_OR:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_3;
      }
      op = BooleanOp();
      expr2 = BooleanPart();
                  expr = BooleanExpression.create(expr, expr2, op);
    }
          {if (true) return expr;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter BooleanPart() throws ParseException {
  IFilter filter = null;
  boolean hasNot = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_NOT:
      jj_consume_token(K_NOT);
                    hasNot = true;
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CATEGORY_KEY:
      /* Category Key */
                      filter = CategoryKey();
      break;
    case ATT_STR_KEY:
    case ATT_VALUE_KEY:
    case ATT_BOOL_KEY:
    case ATT_LIST_KEY:
    case ATT_TREE_KEY:
    case CAT_ATT_STR_KEY:
    case CAT_ATT_VALUE_KEY:
    case CAT_ATT_BOOL_KEY:
    case CAT_ATT_LIST_KEY:
    case CAT_ATT_TREE_KEY:
      filter = AttributeExpression();
      break;
    case AREA_KEY:
      filter = AreaFilter();
      break;
    case OPENPAREN:
      jj_consume_token(OPENPAREN);
      filter = ExpressionPart();
      jj_consume_token(CLOSEPAREN);
                        filter = BracketFilter.createFilter(filter);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                if (hasNot){
              filter = NotExpression.createNotExpression(filter);
            }
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter BooleanItemExpression() throws ParseException {
  IFilter filter = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATT_BOOL_KEY:
      jj_consume_token(ATT_BOOL_KEY);
                filter = AttributeFilter.createBooleanFilter(token.image);
      break;
    case CAT_ATT_BOOL_KEY:
      jj_consume_token(CAT_ATT_BOOL_KEY);
                filter = CategoryAttributeFilter.createBooleanFilter(token.image);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter NumberExpression() throws ParseException {
  IFilter filter = null;
  Operator op = null;
  String key = null;
  Double value = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATT_VALUE_KEY:
      jj_consume_token(ATT_VALUE_KEY);
                                          key = token.image;
      op = NumberOp();
      jj_consume_token(NUMBER);
                            value = Double.parseDouble(token.image);
                        filter = AttributeFilter.createValueFilter(key, op, value);
      break;
    case CAT_ATT_VALUE_KEY:
      jj_consume_token(CAT_ATT_VALUE_KEY);
                                              key = token.image;
      op = NumberOp();
      jj_consume_token(NUMBER);
                            value = Double.parseDouble(token.image);
                        filter = CategoryAttributeFilter.createValueFilter(key, op, value);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter AttributeExpression() throws ParseException {
        IFilter filter = null;
        String key;
        Operator op;
        String value;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATT_STR_KEY:
    case CAT_ATT_STR_KEY:
      /* String comparison */
              filter = StringExpression();
      break;
    case ATT_VALUE_KEY:
    case CAT_ATT_VALUE_KEY:
      /* Numeric comparison */
              filter = NumberExpression();
      break;
    case ATT_BOOL_KEY:
    case CAT_ATT_BOOL_KEY:
      /* boolean */
              filter = BooleanItemExpression();
      break;
    case ATT_LIST_KEY:
      jj_consume_token(ATT_LIST_KEY);
                                  key = token.image;
      jj_consume_token(EQUAL);
                            op = Operator.parseOperator(token.image);
      jj_consume_token(DM_KEY);
                             value = token.image;
                filter = AttributeFilter.createListItemFilter(key,op,value);
      break;
    case CAT_ATT_LIST_KEY:
      jj_consume_token(CAT_ATT_LIST_KEY);
                                      key = token.image;
      jj_consume_token(EQUAL);
                            op = Operator.parseOperator(token.image);
      jj_consume_token(DM_KEY);
                             value = token.image;
                filter = CategoryAttributeFilter.createListItemFilter(key,op,value);
      break;
    case ATT_TREE_KEY:
      jj_consume_token(ATT_TREE_KEY);
                                  key = token.image;
      jj_consume_token(EQUAL);
                            op = Operator.parseOperator(token.image);
      jj_consume_token(DM_KEY);
                             value = token.image;
                filter = AttributeFilter.createTreeItemFilter(key,op,value);
      break;
    case CAT_ATT_TREE_KEY:
      jj_consume_token(CAT_ATT_TREE_KEY);
                                      key = token.image;
      jj_consume_token(EQUAL);
                            op = Operator.parseOperator(token.image);
      jj_consume_token(DM_KEY);
                             value = token.image;
                filter = CategoryAttributeFilter.createTreeItemFilter(key,op,value);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return filter;}
    throw new Error("Missing return statement in function");
  }

  final public IFilter StringExpression() throws ParseException {
  IFilter filter = null;
  Operator op = null;
  String key = null;
  String value = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATT_STR_KEY:
      jj_consume_token(ATT_STR_KEY);
                                         key = token.image;
      op = StringOp();
      jj_consume_token(QUOTED_STRING);
                                           value = token.image;
                        filter = AttributeFilter.createStringFilter(key, op, value);
      break;
    case CAT_ATT_STR_KEY:
      jj_consume_token(CAT_ATT_STR_KEY);
                                             key = token.image;
      op = StringOp();
      jj_consume_token(QUOTED_STRING);
                                           value = token.image;
                        filter = CategoryAttributeFilter.createStringFilter(key, op, value);
      break;
    default:
